--- a/index.html
+++ b/index.html
@@ -7,7 +7,37 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+      <div id="app">
+          <v-app>
+            <v-navigation-drawer
+            fixed
+            :value="true"
+            app
+          >
+           <v-list dense>
+              <v-list-tile @click="">
+                <v-list-tile-action>
+                  <v-icon>home</v-icon>
+                </v-list-tile-action>
+                <v-list-tile-content>
+                  <v-list-tile-title>Home</v-list-tile-title>
+                </v-list-tile-content>
+              </v-list-tile>
+              <v-list-tile @click="">
+                <v-list-tile-action>
+                  <v-icon>contact_mail</v-icon>
+                </v-list-tile-action>
+                <v-list-tile-content>
+                  <v-list-tile-title>Contact</v-list-tile-title>
+                </v-list-tile-content>
+              </v-list-tile>
+            </v-list>
+          </v-navigation-drawer>
+              
+            <v-content>
+              <v-container>Hello world</v-container>
+            </v-content>
+          </v-app>
+        </div>
   </body>
 </html>
